# stxeco-zk-voting-proofs

./: Cargo.toml  README.md
proofs/: Cargo.toml
proofs/src/: lib.rs
proofs/src/stacks_voting/: mod.rs  stacks_blockchain_utils.rs  types.rs  utils.rs  verifier.rs
proofs/src/vdf0/: mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/stacks/: mod.rs  proofs.rs  transactions.rs
server/src/tests/: integration_tests.rs
src/: main.rs  routes.rs
src/core/: mod.rs
src/proofs/: mod.rs
src/proofs/stacks_voting/: mod.rs  prover.rs  utils.rs  verifier.rs
src/proofs/vdf/: mod.rs
src/shoe_size/: mod.rs
src/stacks/: mod.rs  proofs.rs  transactions.rs  utils.rs
src/stacks_voting/: mod.rs  stacks_warp.rs  transactions.rs  utils.rs
src/tests/: curl_commands.md  integration_tests.rs
src/vdf/: mod.rs
